# finelpy

./: .readthedocs.yaml  CMakeLists.txt  Doxyfile  MANIFEST.in  README.rst  pyproject.toml  run.sh  run_full.sh
.github/workflows/: release.yaml
apostila/: 1-Introducao.tex  10-Consideracoes.tex  2-Resmat.tex  3-Barra.tex  4-Elemento_barra.tex  5-Viga_an.tex  6-Elemento_viga.tex  7-Calor.tex  8-Plano.tex  9-Isoparametrico.tex  A-superconvergencia.tex  Apostila_IM381 (2).fdb_latexmk  Apostila_IM381 (2).fls  Apostila_IM381.aux  Apostila_IM381.fdb_latexmk  Apostila_IM381.fls  Apostila_IM381.out  Apostila_IM381.tex  Apostila_IM381.toc  B-retangular.tex  Capa.tex  Pacotes.tex
docs/: requirements.txt
docs/source/: conf.py  cpp_api.rst  index.rst  python_api.rst
docs/source/api/: finelpy.analysis.rst  finelpy.element.rst  finelpy.geometry.rst  finelpy.material.rst  finelpy.mesh.rst  finelpy.results.rst  finelpy.rst  finelpy.solver.rst  modules.rst
docs/source/custom/: element.rst  material.rst
docs/source/intro/: about.rst  install.rst
docs/source/tutorial/: boundary_conditions.rst  structure.rst
include/finelc/: compatibility.h  enumerations.h  hdual.h  matrix.h
include/finelc/analysis/: analysis.h  interpolation.h
include/finelc/binding/: bindings.h  element_binding.h  geometry_binding.h  material_binding.h  matrix_binding.h
include/finelc/element_geometry/: element_geometry.h  hex.h  quad.h  tri.h
include/finelc/element_physics/: element_physics.h  plane.h  solid.h  thermal.h
include/finelc/elements/: element.h  element_matrix.h  integration.h  shape_func.h
include/finelc/geometry/: geometry.h
include/finelc/material/: constitutive.h  elastic.h  material.h  thermal.h
include/finelc/mesh/: element_finder.h  mesh.h  meshers.h  node_iterators.h
include/finelc/result/: result.h
include/finelc/solver/: solver.h
src/finelpy/: __init__.py  binding.cpp  utils.py
src/finelpy/analysis/: __init__.py  analysis.py
src/finelpy/bindings/: analysis_binding.cpp  element_binding.cpp  geometry_binding.cpp  material_binding.cpp  matrix_binding.cpp  mesh_binding.cpp  solver_binding.cpp
src/finelpy/cpp/: compatibility.cpp
src/finelpy/cpp/analysis/: analysis.cpp
src/finelpy/cpp/element_geometry/: hex.cpp  quad.cpp  tri.cpp
src/finelpy/cpp/element_physics/: element_physics.cpp  plane.cpp  solid.cpp  thermal.cpp
src/finelpy/cpp/elements/: elements.cpp  integration.cpp  shape_funcs.cpp
src/finelpy/cpp/geometry/: geometry.cpp
src/finelpy/cpp/material/: elasticity.cpp  material.cpp
src/finelpy/cpp/matrix/: matrix.cpp  petsc_funcs.cpp  solvers.cpp
src/finelpy/cpp/mesh/: mesh_and_mesher.cpp  mesher_1d.cpp  mesher_2d.cpp  mesher_3d.cpp
src/finelpy/cpp/result/: plot.cpp  result.cpp
src/finelpy/cpp/solver/: solver.cpp
src/finelpy/element/: __init__.py  element.py  line_elements.py
src/finelpy/elements/: __init__.py  elements.py  line_elements.py
src/finelpy/geometry/: __init__.py  geometry.py
src/finelpy/material/: __init__.py  material.py
src/finelpy/mesh/: __init__.py  mesh.py
src/finelpy/results/: __init__.py  results.py
src/finelpy/solver/: __init__.py
stubs/finelpy/: __init__.pyi  utils.pyi
stubs/finelpy/core/: __init__.pyi  analysis.pyi  element.pyi  geometry.pyi  material.pyi  mesh.pyi  solver.pyi
stubs/finelpy/geometry/: __init__.pyi  geometry.pyi
stubs/finelpy/material/: __init__.pyi  material.pyi
tests/: beam.py  beam_example.py  exemplo_4.1.py  hexa.py  simple_mesh.py  test.py  test2.py  test_heat.py  trelica.py
